--- a/Eugned2/src/view/RelatorioPaciente2.jrxml
+++ b/Eugned2/src/view/RelatorioPaciente2.jrxml
@@ -3,22 +3,48 @@
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
-	<queryString language="SQL">
+	<parameter name="paramFiltrar" class="java.lang.Boolean"/>
+	<parameter name="paramDataInicial" class="java.util.Date"/>
+	<parameter name="paramDataFinal" class="java.util.Date"/>
+	<queryString>
 		<![CDATA[SELECT
      paciente.`nome` AS paciente_nome,
      paciente_endereco.`tipoEndereco` AS paciente_endereco_tipoEndereco,
      endereco.`numero` AS endereco_numero,
      endereco.`bairro` AS endereco_bairro,
-     endereco.`rua` AS endereco_rua
+     endereco.`rua` AS endereco_rua,
+     endereco.`cep` AS endereco_cep,
+     endereco.`cidade` AS endereco_cidade,
+     endereco.`estado` AS endereco_estado,
+     max(incidente.`dataIncidente`) AS dataIncidente
 FROM
      `paciente` paciente INNER JOIN `paciente_endereco` paciente_endereco ON paciente.`id` = paciente_endereco.`idPaciente`
-     INNER JOIN `endereco` endereco ON paciente_endereco.`idEndereco` = endereco.`id`]]>
+     INNER JOIN `endereco` endereco ON paciente_endereco.`idEndereco` = endereco.`id`
+     INNER JOIN `incidente` incidente ON paciente.`id` = incidente.`idPaciente`
+WHERE
+     $P{paramFiltrar} = false
+  OR incidente.`dataSintoma` BETWEEN $P{paramDataInicial} AND $P{paramDataFinal}
+GROUP BY
+	paciente_nome,
+	paciente_endereco_tipoEndereco,
+	endereco_numero,
+	endereco_bairro,
+	endereco_rua,
+	endereco_cep,
+	endereco_cidade,
+	endereco_estado]]>
 	</queryString>
 	<field name="paciente_nome" class="java.lang.String"/>
-	<field name="paciente_endereco_tipoEndereco" class="java.lang.Integer"/>
+	<field name="paciente_endereco_tipoEndereco" class="java.lang.Boolean"/>
 	<field name="endereco_numero" class="java.lang.String"/>
 	<field name="endereco_bairro" class="java.lang.String"/>
 	<field name="endereco_rua" class="java.lang.String"/>
+	<field name="endereco_cep" class="java.lang.String"/>
+	<field name="endereco_cidade" class="java.lang.String"/>
+	<field name="endereco_estado" class="java.lang.String"/>
+	<field name="dataIncidente" class="java.sql.Date">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
 	<group name="paciente_nome">
 		<groupExpression><![CDATA[$F{paciente_nome}]]></groupExpression>
 		<groupHeader>
@@ -34,32 +60,22 @@ FROM
 					<reportElement x="-20" y="23" width="595" height="1" forecolor="#666666" uuid="eae3584c-1352-44a5-b4e3-3f7e868e76dd"/>
 				</line>
 				<textField isStretchWithOverflow="true">
-					<reportElement x="117" y="0" width="94" height="20" uuid="42a7bbd5-ddae-48c2-a655-f2c44ce6977c"/>
+					<reportElement x="117" y="0" width="341" height="20" uuid="42a7bbd5-ddae-48c2-a655-f2c44ce6977c"/>
 					<textElement>
 						<font size="10"/>
 					</textElement>
-					<textFieldExpression><![CDATA[$F{paciente_endereco_tipoEndereco}]]></textFieldExpression>
+					<textFieldExpression><![CDATA[$F{endereco_rua} + ", " +
+$F{endereco_numero} + " - " +
+$F{endereco_bairro} + " Cep " +
+$F{endereco_cep} + " - " +
+$F{endereco_cidade} + " - " + $F{endereco_estado}]]></textFieldExpression>
 				</textField>
-				<textField isStretchWithOverflow="true">
-					<reportElement x="212" y="1" width="66" height="20" uuid="d768a500-ef9d-4a21-8b14-4a67f5380599"/>
-					<textElement>
+				<textField isStretchWithOverflow="true" pattern="dd/MM/yyyy">
+					<reportElement x="458" y="1" width="97" height="20" uuid="cf87aa6b-4fb8-4072-a140-96743bf0a4ba"/>
+					<textElement textAlignment="Right">
 						<font size="10"/>
 					</textElement>
-					<textFieldExpression><![CDATA[$F{endereco_numero}]]></textFieldExpression>
-				</textField>
-				<textField isStretchWithOverflow="true">
-					<reportElement x="278" y="1" width="138" height="20" uuid="46eb53de-709e-47f3-b012-9aa1582518d7"/>
-					<textElement>
-						<font size="10"/>
-					</textElement>
-					<textFieldExpression><![CDATA[$F{endereco_bairro}]]></textFieldExpression>
-				</textField>
-				<textField isStretchWithOverflow="true">
-					<reportElement x="418" y="1" width="137" height="20" uuid="cf87aa6b-4fb8-4072-a140-96743bf0a4ba"/>
-					<textElement>
-						<font size="10"/>
-					</textElement>
-					<textFieldExpression><![CDATA[$F{endereco_rua}]]></textFieldExpression>
+					<textFieldExpression><![CDATA[$F{dataIncidente}]]></textFieldExpression>
 				</textField>
 			</band>
 		</groupHeader>
@@ -100,32 +116,18 @@ FROM
 				<reportElement x="-20" y="20" width="595" height="1" forecolor="#666666" uuid="e1a0955e-1f9d-415b-b106-30e7007662e4"/>
 			</line>
 			<staticText>
-				<reportElement mode="Opaque" x="115" y="0" width="96" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="a4cc9f4a-707d-46e9-a01c-9a28828cacf8"/>
+				<reportElement mode="Opaque" x="115" y="0" width="343" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="a4cc9f4a-707d-46e9-a01c-9a28828cacf8"/>
 				<textElement textAlignment="Left">
 					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Endereço]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="212" y="0" width="65" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="e998bf74-e171-4285-a1b4-19e196e12929"/>
-				<textElement textAlignment="Left">
-					<font size="12" isBold="true"/>
-				</textElement>
-				<text><![CDATA[Nº]]></text>
-			</staticText>
-			<staticText>
-				<reportElement mode="Opaque" x="278" y="0" width="138" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="f88a4aa8-cbe5-406d-87ad-6a02380c14d4"/>
-				<textElement textAlignment="Left">
-					<font size="12" isBold="true"/>
-				</textElement>
-				<text><![CDATA[Bairo]]></text>
-			</staticText>
-			<staticText>
-				<reportElement mode="Opaque" x="417" y="0" width="138" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="10ac1ac2-223e-44e4-bc9a-a25bb9849845"/>
-				<textElement textAlignment="Left">
+				<reportElement mode="Opaque" x="458" y="0" width="97" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="10ac1ac2-223e-44e4-bc9a-a25bb9849845"/>
+				<textElement textAlignment="Right">
 					<font size="14" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Rua]]></text>
+				<text><![CDATA[Últ. Diag.]]></text>
 			</staticText>
 			<staticText>
 				<reportElement mode="Opaque" x="0" y="0" width="115" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="499916e4-91a9-477c-a9dd-8c9c4f02b9ed"/>
