--- a/Eugned2/src/view/RelatorioFocos.jrxml
+++ b/Eugned2/src/view/RelatorioFocos.jrxml
@@ -8,81 +8,26 @@
 	<parameter name="paramDataFinal" class="java.util.Date"/>
 	<queryString>
 		<![CDATA[SELECT
-     paciente.`nome` AS paciente_nome,
-     paciente_endereco.`tipoEndereco` AS paciente_endereco_tipoEndereco,
+     foco.`dataFoco` AS foco_dataFoco,
+     endereco.`rua` AS endereco_rua,
      endereco.`numero` AS endereco_numero,
      endereco.`bairro` AS endereco_bairro,
-     endereco.`rua` AS endereco_rua,
      endereco.`cep` AS endereco_cep,
      endereco.`cidade` AS endereco_cidade,
-     endereco.`estado` AS endereco_estado,
-     max(incidente.`dataIncidente`) AS dataIncidente
+     endereco.`estado` AS endereco_estado
 FROM
-     `paciente` paciente LEFT JOIN `paciente_endereco` paciente_endereco ON paciente.`id` = paciente_endereco.`idPaciente`
-     LEFT JOIN `endereco` endereco ON paciente_endereco.`idEndereco` = endereco.`id`
-     LEFT JOIN `incidente` incidente ON paciente.`id` = incidente.`idPaciente`
+     `foco` foco INNER JOIN `endereco` endereco ON foco.`idEndereco` = endereco.`id`
 WHERE
      $P{paramFiltrar} = false
-  OR incidente.`dataSintoma` BETWEEN $P{paramDataInicial} AND $P{paramDataFinal}
-GROUP BY
-	paciente_nome,
-	paciente_endereco_tipoEndereco,
-	endereco_numero,
-	endereco_bairro,
-	endereco_rua,
-	endereco_cep,
-	endereco_cidade,
-	endereco_estado]]>
+  OR (foco.`dataFoco` BETWEEN $P{paramDataInicial} AND $P{paramDataFinal})]]>
 	</queryString>
-	<field name="paciente_nome" class="java.lang.String"/>
-	<field name="paciente_endereco_tipoEndereco" class="java.lang.Boolean"/>
+	<field name="foco_dataFoco" class="java.sql.Date"/>
+	<field name="endereco_rua" class="java.lang.String"/>
 	<field name="endereco_numero" class="java.lang.String"/>
 	<field name="endereco_bairro" class="java.lang.String"/>
-	<field name="endereco_rua" class="java.lang.String"/>
 	<field name="endereco_cep" class="java.lang.String"/>
 	<field name="endereco_cidade" class="java.lang.String"/>
 	<field name="endereco_estado" class="java.lang.String"/>
-	<field name="dataIncidente" class="java.sql.Date">
-		<fieldDescription><![CDATA[]]></fieldDescription>
-	</field>
-	<group name="paciente_nome">
-		<groupExpression><![CDATA[$F{paciente_nome}]]></groupExpression>
-		<groupHeader>
-			<band height="24">
-				<textField>
-					<reportElement mode="Opaque" x="3" y="0" width="112" height="20" forecolor="#000000" backcolor="#FFFFFF" uuid="5d35f020-7953-425f-a911-eb750bd7f1ea"/>
-					<textElement>
-						<font size="10" isBold="false"/>
-					</textElement>
-					<textFieldExpression><![CDATA[$F{paciente_nome}]]></textFieldExpression>
-				</textField>
-				<line>
-					<reportElement x="-20" y="23" width="595" height="1" forecolor="#666666" uuid="eae3584c-1352-44a5-b4e3-3f7e868e76dd"/>
-				</line>
-				<textField isStretchWithOverflow="true">
-					<reportElement x="117" y="0" width="341" height="20" uuid="42a7bbd5-ddae-48c2-a655-f2c44ce6977c"/>
-					<textElement>
-						<font size="10"/>
-					</textElement>
-					<textFieldExpression><![CDATA[$F{endereco_rua} + ", " +
-$F{endereco_numero} + " - " +
-$F{endereco_bairro} + " Cep " +
-$F{endereco_cep} + " - " +
-$F{endereco_cidade} + " - " + $F{endereco_estado}]]></textFieldExpression>
-				</textField>
-				<textField isStretchWithOverflow="true" pattern="dd/MM/yyyy">
-					<reportElement x="458" y="1" width="97" height="20" uuid="cf87aa6b-4fb8-4072-a140-96743bf0a4ba"/>
-					<textElement textAlignment="Right">
-						<font size="10"/>
-					</textElement>
-					<textFieldExpression><![CDATA[$F{dataIncidente}]]></textFieldExpression>
-				</textField>
-			</band>
-		</groupHeader>
-		<groupFooter>
-			<band/>
-		</groupFooter>
-	</group>
 	<background>
 		<band/>
 	</background>
@@ -100,9 +45,9 @@ $F{endereco_cidade} + " - " + $F{endereco_estado}]]></textFieldExpression>
 				<staticText>
 					<reportElement x="395" y="43" width="180" height="20" forecolor="#FFFFFF" uuid="c6acff93-b50e-4645-b1f7-d63c46805285"/>
 					<textElement textAlignment="Right">
-						<font size="14" isBold="false"/>
+						<font size="16" isBold="true"/>
 					</textElement>
-					<text><![CDATA[Relatório de Pacientes]]></text>
+					<text><![CDATA[Relatório Focos]]></text>
 				</staticText>
 			</frame>
 		</band>
@@ -116,31 +61,46 @@ $F{endereco_cidade} + " - " + $F{endereco_estado}]]></textFieldExpression>
 				<reportElement x="-20" y="20" width="595" height="1" forecolor="#666666" uuid="e1a0955e-1f9d-415b-b106-30e7007662e4"/>
 			</line>
 			<staticText>
-				<reportElement mode="Opaque" x="115" y="0" width="343" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="a4cc9f4a-707d-46e9-a01c-9a28828cacf8"/>
+				<reportElement mode="Opaque" x="0" y="0" width="440" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="a4cc9f4a-707d-46e9-a01c-9a28828cacf8"/>
 				<textElement textAlignment="Left">
 					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Endereço]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="458" y="0" width="97" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="10ac1ac2-223e-44e4-bc9a-a25bb9849845"/>
-				<textElement textAlignment="Right">
-					<font size="14" isBold="true"/>
-				</textElement>
-				<text><![CDATA[Últ. Diag.]]></text>
-			</staticText>
-			<staticText>
-				<reportElement mode="Opaque" x="0" y="0" width="115" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="499916e4-91a9-477c-a9dd-8c9c4f02b9ed"/>
-				<textElement>
+				<reportElement mode="Opaque" x="440" y="0" width="115" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="499916e4-91a9-477c-a9dd-8c9c4f02b9ed"/>
+				<textElement textAlignment="Center">
 					<font size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Paciente]]></text>
+				<text><![CDATA[Data Foco]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
-	<columnFooter>
-		<band/>
-	</columnFooter>
+	<detail>
+		<band height="24">
+			<textField pattern="dd/MM/yyyy">
+				<reportElement mode="Opaque" x="440" y="0" width="112" height="20" forecolor="#000000" backcolor="#FFFFFF" uuid="5d35f020-7953-425f-a911-eb750bd7f1ea"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="10" isBold="false"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{foco_dataFoco}]]></textFieldExpression>
+			</textField>
+			<line>
+				<reportElement x="0" y="23" width="554" height="1" forecolor="#666666" uuid="eae3584c-1352-44a5-b4e3-3f7e868e76dd"/>
+			</line>
+			<textField isStretchWithOverflow="true">
+				<reportElement x="0" y="0" width="438" height="20" uuid="42a7bbd5-ddae-48c2-a655-f2c44ce6977c"/>
+				<textElement verticalAlignment="Middle">
+					<font size="10"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{endereco_rua} + ", " +
+$F{endereco_numero} + " - " +
+$F{endereco_bairro} + " Cep " +
+$F{endereco_cep} + " - " +
+$F{endereco_cidade} + " - " + $F{endereco_estado}]]></textFieldExpression>
+			</textField>
+		</band>
+	</detail>
 	<pageFooter>
 		<band height="17">
 			<textField>
